<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/cor_l1">

    <TextView
        android:background="@color/cor_c1"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/text_scratch"
        android:layout_margin="16dp"
        android:padding="32dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|center_horizontal"
        android:padding="32sp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_solid_background"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:onClick="onSolidBackground"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_gallery_image"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:onClick="onGalleryImage"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_photography"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:onClick="onPhotography"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_history"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:onClick="onHistory"/>
    </LinearLayout>


</FrameLayout>